--- a/styles/DataGrid.module.less
+++ b/styles/DataGrid.module.less
@@ -94,7 +94,7 @@
 
 .footerContent {
   height: 44px;
-  border-top: 1px solid #DCDCDC;
+  //border-top: 1px solid #DCDCDC;
   display: flex;
 
   .buttons {
